@@ -1,6 +1,7 @@
 * ???
 - [lc] fixed a bug with element name generation
 - [lc] added support for the rndhex attribute as in Perl's Directory::Queue
+- [lc] always use the tempfile module for temporary directories
 
 * Wed May 22 2013 Lionel Cons <lionel.cons@cern.ch> - 1.3
 - [lc] improved the test scripts
